versioned_docs/version-0.7.0/tools/cli/package-management/command-reference/1.init.md
# kcl mod init

Init a kcl module.

## Usage

```shell
kcl mod init [options][module_name]
```

## Description

`kcl mod init` will initialize a kcl package in the current directory. If the package name is not provided, the name of the current directory will be used.

If the package name is provided, a subdirectory with the name of the package will be created and the package will be initialized in that directory.

`kcl mod init` will create `kcl.mod`, `kcl.mod.lock` and `main.k` under the package directory.

## Options

### --help, -h

Show help for `kcl mod init` command.

## Examples

### Init the current directory into a kcl package

```shell
# create an empty directory
$ mkdir my_package

# cd into the directory
$ cd my_package

# init the current directory into a kcl package
$ kcl mod init
```

### Init a kcl package with a name

```shell
# init a kcl package with a name 'my_package'
kcl mod init my_package
```
